--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 
-MONGO_URL=mongodb+srv://ag6526803:Password123@cluster0.zn9oeqa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/MoneyApp
+MONGO_URL=mongodb+srv://ag6526803:Password123@cluster0.zn9oeqa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=AnuragGupta
 
